@@ -57,6 +57,7 @@ glb_smear  *glb_smear_reset(glb_smear *in);
 void glb_compute_smearing_matrix(double ***matrix, 
 			   int **low, int **up, glb_smear *in
 			   ,const struct glb_experiment *head);
+void glb_optimize_smearing_matrix(glb_smear *s, double **matrix, int *lower, int *upper);
 void glb_filter_compensate(glb_smear *s, double **matrix, int *lower, int *upper);
 
 
